<resources>
    <string name="app_name">Название приложения</string>
    <string name="btn_open_create_task_text">Добавить новую задачу</string>
    <string name="ed_task_text_label">Введите задачу...</string>
    <string name="btn_set_task_priority_text">ABCD</string>
    <string name="btn_set_task_date_text">Дата</string>
    <string name="btn_set_task_time_text">Время</string>
    <string name="create_task_activity_label">Какое-то название</string>
    <string name="main_activity_label">Какое-то название</string>
    <string name="choose_priority_dialog_title">Выбрать приоритет</string>

    <string name="priority_a">A</string>
    <string name="priority_b">B</string>
    <string name="priority_c">C</string>
    <string name="priority_d">D</string>
    <string name="btn_create_task_text">Создать</string>
    <string name="tv_main_priority_default_text">Приоритет неизвестен</string>
    <string name="tv_main_tasks_stats_default_text">Статистика не найдена</string>
    <string name="tv_main_date_default_text">Дата неизвестна</string>
    <string name="btn_sync_task_text">sync</string>

    <string name="pref_ask_for_calendar_id_key">ask_for_calendar_id</string>
    <string name="choose_calendar_id_title">Выберите календарь</string>
    <string name="choose_calendar_id_ok">Выбрать</string>
    <string name="choose_calendar_id_cancel">Отмена</string>
    <string name="pref_calendar_id">pref_calendar_id</string>
    <string name="cb_remember_calendar_id_text">Запомнить</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_today">Сегодня</string>
    <string name="navigation_tomorrow">Завтра</string>
    <string name="navigation_this_week">На этой неделе</string>
    <string name="navigation_choose_date">Выбрать дату</string>
    <string name="navigation_eisenhower">Метод Эйзенхауэра</string>
    <string name="navigation_settings">Настройки</string>
    <string name="navigation_about">О программе</string>
    <string name="create_task_update_text">Сохранить</string>
    <string name="test_intro">Небольшой тест: важно или срочно? Отметьте правильный вариант (только один).</string>
    <string name="btn_cancel_create_task_text">Отмена</string>
    <string name="choose_notify_time_dialog_title">Время напоминания</string>

    <string name="fifteen_minutes">За 15 минут</string>
    <string name="half_an_hour">За 30 минут</string>
    <string name="hour">За час</string>
    <string name="no_notifications">Не напоминать</string>
    <string name="notification_title">Какой-то текст</string>
    <string name="settings_activity_title">Настройки</string>
    <string name="pref_time_format">pref_time_format</string>
    <string name="pref_time_format_title">24-часовой формат</string>
    <string name="twelve_format">12-часовой формат</string>
    <string name="twenty_four_format">24-часовой формат</string>
    <string name="navigation_all">Все</string>
    <string name="pref_ask_for_calendar_id_key_title">Спрашивать календарь</string>
    <string name="pref_ask_for_calendar_id_key_title_off">Нет</string>
    <string name="pref_ask_for_calendar_id_key_title_on">Да</string>
    <string name="test_theory">Используйте следующие критерии важности, задавая вопросы к каждому делу: \nВыполнение этой задачи необходимо для достижения моей ключевой цели (Да – значит, важно; Нет – неважно). \nНевыполнение дела влечет за собой серьезные последствия для текущей деятельности (Да – важно; Нет – неважно). \nКритерий срочности: \nЕсли задачу не выполнить сейчас, то она теряет свою актуальность (Да – срочная; Нет – несрочная).</string>
</resources>

