<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:title="@string/navigation_all"/>
        <item
            android:id="@+id/nav_today"
            android:title="@string/navigation_today"/>
        <item
            android:id="@+id/nav_tomorrow"
            android:title="@string/navigation_tomorrow"/>
        <item
            android:id="@+id/nav_this_week"
            android:title="@string/navigation_this_week"/>
        <item
            android:id="@+id/nav_choose_date"
            android:title="@string/navigation_choose_date"/>
        <item
            android:id="@+id/nav_eisenhower"
            android:title="@string/navigation_eisenhower"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/navigation_settings"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/navigation_about"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
